--- a/dashboard-client/src/scss/_variables.scss
+++ b/dashboard-client/src/scss/_variables.scss
@@ -4,6 +4,9 @@
 
 // Color system
 
+// Midnight Sun Background color
+$onyx-base:       #3D2F42 !default;
+
 // scss-docs-start gray-color-variables
 // $white:     #fff !default;
 // $gray-base: #3c4b64 !default;
@@ -30,7 +33,7 @@
 //   "600": $gray-600,
 //   "700": $gray-700,
 //   "800": $gray-800,
-//   "900": $gray-900
+//   "900": $gray-900$gray-base
 // ) !default;
 // scss-docs-end gray-colors-map
 // fusv-enable
@@ -279,8 +282,8 @@
 // $enable-important-utilities:        true !default;
 // $enable-contrast-ratio-correction:  true !default;
 // $enable-contrast-ratio-warnings:    false !default;
-// $enable-ltr:                        true !default;
-// $enable-rtl:                        false !default;
+$enable-ltr:                        true !default;
+$enable-rtl:                        true !default;
 
 // Set mobile breakpoint
 
@@ -1640,7 +1643,7 @@
 // $sidebar-padding-y:                        0 !default;
 // $sidebar-padding-x:                        0 !default;
 // $sidebar-color:                            $high-emphasis-inverse !default;
-// $sidebar-bg:                               $gray-base !default;
+$sidebar-bg:                               $onyx-base !default;
 // $sidebar-border-width:                     0 !default;
 // $sidebar-border-color:                     transparent !default;
 // $sidebar-transition:                       margin-left .15s, margin-right .15s, box-shadow .075s, transform .15s, width .15s, z-index 0s ease .15s !default;
