--- a/dashboard-client/src/scss/style.scss
+++ b/dashboard-client/src/scss/style.scss
@@ -1,12 +1,10 @@
 // If you want to override variables do it here
 @import "variables";
 
-$enable-ltr: true;
-$enable-rtl: true;
-
 // Import CoreUI for React components library
 @import "@coreui/coreui/scss/coreui";
 
+// Styles for Layout.js
 @import "layout";
 
 // If you want to add custom CSS you can put it here.
